2007-08-27  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/patterns/Latn-en.line-break.conf:
	* data/patterns/Latn-en.line-break.in:
	* data/patterns/Latn.line-break.conf:
	* data/patterns/Latn.line-break.in:
	New preliminary files for line-break patterns.

	* gaupol/patternman.py (get_patterns):
	Allow patterns with a more specific code to override those with a less
	specific code if the names clash.

2007-08-26  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* tools/py2exe.bat:
	Copy DLLs from %GTKDIR%\bin.

2007-08-25  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/dialogs/transform.py:
	Do not use DOWNWARDS ARROW WITH CORNER LEFTWARDS in text labels,
	instead strip tags and join lines with spaces.

	* gaupol/gtk/ruler.py (_Ruler):
	Use gaupol.re_any_tag.

	* gaupol/__init__.py:
	Add gaupol.re_any_tag.

2007-08-23  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/agents/open.py (on_select_video_file_activate):
	Fix ``GtkWarning: gtk_file_system_win32_get_parent: assertion
	`g_path_is_absolute (filename)' failed'' on Windows.

2007-08-23  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* bin/gaupol:
	Fix errors in previous commit.

2007-08-23  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* bin/gaupol (prepare_paths):
	Refactor as with py2exe __file__ is not available.

	* data/icons/gaupol.ico:
	New icon for Windows.

	* doc/RELEASING.win32:
	New release checklist file.

	* gaupol/paths.py:
	Handle the special case of py2exe installations.

	* MANIFEST.in:
	Add doc/MODULES, doc/RELEASING and doc/RELEASING.win32.

	* setup.py:
	Add py2exe options and refactor file listings.

	* tools/data/gaupol.iss:
	New file for creating Inno Setup installers.

	* tools/py2exe.bat:
	New file for creating a Windows executable.

	* tools/translate (compile_data):
	New function for compiling data files.

2007-08-23  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/dialogs/file/open.py:
	* gaupol/gtk/dialogs/file/save.py:
	* gaupol/gtk/dialogs/file/subtitle.py:
	Add missing "Auto-detected" encoding entry.
