@@ -5,7 +5,7 @@ persistent=no
 [MESSAGES CONTROL]
 disable-checker=basic,design,similarities
 disable-msg-cat=
-disable-msg=C0203,C0301,C0322,F0401,I0011,R0201,R0401,W0142,W0212,W0223,W0401,W0402,W0403,W0410,W0614,W0622,W0703,W0704,W1010
+disable-msg=C0203,C0301,C0321,C0322,F0401,I0011,R0201,R0401,W0142,W0212,W0223,W0401,W0402,W0403,W0410,W0614,W0622,W0703,W0704,W1010
 
 [REPORTS]
 comment=no
